Spacing fixes

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,8 +31,8 @@ p {
 }
 
 .page-header { 
-  padding-bottom:0px;
-  margin-top:0px;
+  padding-bottom: 10px;
+  margin-top: 0px;
 }
 
 textarea#description {
@@ -53,6 +53,14 @@ textarea#description {
 
 .navbar .nav > li.collapse-show {
     display:list-item;
+  }
+
+.navbar {
+    margin-bottom: 0;
+  }
+
+#content {
+    padding: 15px;
   }
 }
 
